--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ chardet = "*"
 buildozer = "*"
 pylint = "*"
 cython = "==0.29.33"
-distutils = "*"
+setuptools = "*"
 
 [requires]
 python_version = "3.12"
